--- a/BucketList.css
+++ b/BucketList.css
@@ -4,11 +4,28 @@ body {
 }
 
 .form-signin {
-  max-width: 330px;
+    max-width: 330px;
+    padding: 15px;
+    margin: 0 auto;
+}
+
+.form-signup {
+  max-width: 630px;
   padding: 15px;
   margin: 0 auto;
 
 }
+
+.form-signup .form-control {
+    position: relative;
+    height: auto;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 10px;
+    font-size: 16px;
+}
+
 .form-signin .form-control {
   position: relative;
   height: auto;
