--- a/Templates/index.html
+++ b/Templates/index.html
@@ -5,7 +5,7 @@
 
     <!-- This sets the width of the page to the device width and the zoom level -->
     <meta name="viewport" content="width = device-width, initial-scale = 1">
-    <title>Bucket List App</title>
+    <title>Index</title>
 
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
