added requirements file

--- a/Templates/CreateList.html
+++ b/Templates/CreateList.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" type="text/css" href="BucketList.css">
+    <link rel="stylesheet" type="text/css" href="../Static/BucketList.css">
 
 
 
@@ -17,7 +17,7 @@
 <body>
 
 <div class="container">
-    <img src="Bucket-List-Drawing.jpg" id="BucketLogo" class="img-responsive pull-left" alt="Bucket List image" style="width:120px;height:120px;">
+    <a href="index.html"><img src="../Static/Bucket-List-Drawing.jpg" id="BucketLogo" class="img-responsive pull-left"  alt="Bucket List image" style="width:120px;height:120px;"></a>
     <div class="header">
 
 
@@ -30,7 +30,7 @@
         <div class="container-fluid">
 
             <ul class="nav navbar-nav">
-                <li ><a href="#">Profile</a></li>
+                <li ><a href="Profile.html">Profile</a></li>
                 <li class="active"><a href="#">Lists</a></li>
                 <li><a href="#">About</a></li>
             </ul>
