--- a/Templates/index.html
+++ b/Templates/index.html
@@ -5,11 +5,11 @@
 
     <!-- This sets the width of the page to the device width and the zoom level -->
     <meta name="viewport" content="width = device-width, initial-scale = 1">
-    <title>Index</title>
+    <title>Home</title>
 
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" type="text/css" href="BucketList.css">
+    <link rel="stylesheet" type="text/css" href="../Static/BucketList.css">
     <style>
         .jumbotron {
             background-color: #4E4D77;
@@ -22,12 +22,12 @@
 </head>
 <body>
 <div class="container">
-    <img src="Bucket-List-Drawing.jpg" id="BucketLogo" class="img-responsive pull-left" alt="Bucket List image" style="width:120px;height:120px;">
+    <a href="index.html"><img src="../Static/Bucket-List-Drawing.jpg" id="BucketLogo" class="img-responsive pull-left"  alt="Bucket List image" style="width:120px;height:120px;"></a>
     <div class="header">
         <nav>
             <ul class="nav nav-pills pull-right">
                 <li role="presentation" class="active"><a href="index.html">Sign In</a></li>
-                <li role="presentation" ><a href="Sign_Up.html">Sign Up</a></li>
+                <li role="presentation" ><a href="signup.html">Sign Up</a></li>
             </ul>
         </nav>
     </div><br>
