--- a/Templates/signup.html
+++ b/Templates/signup.html
@@ -8,12 +8,12 @@
 
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" type="text/css" href="BucketList.css">
+    <link rel="stylesheet" type="text/css" href="../Static/BucketList.css">
 
 </head>
 <body>
 <div class="container">
-    <img src="Bucket-List-Drawing.jpg" id="BucketLogo" class="img-responsive pull-left" alt="Bucket List image" style="width:120px;height:120px;">
+    <a href="index.html"><img src="../Static/Bucket-List-Drawing.jpg" id="BucketLogo" class="img-responsive pull-left"  alt="Bucket List image" style="width:120px;height:120px;"></a>
     <div class="header">
         <nav>
             <ul class="nav nav-pills pull-right">
