--- a/templates/about.html
+++ b/templates/about.html
@@ -26,9 +26,9 @@
         <div class="container-fluid">
 
             <ul class="nav navbar-nav">
-                <li class="active"><a href="Profile.html">Profile</a></li>
+                <li ><a href="Profile.html">Profile</a></li>
                 <li><a href="createlist.html">Lists</a></li>
-                <li><a href="about.html">About</a></li>
+                <li class="active"><a href="about.html">About</a></li>
             </ul>
             <form class="navbar-form navbar-right" role="search">
                 <div class="form-group">
