--- a/Templates/CreateList.html
+++ b/Templates/CreateList.html
@@ -55,6 +55,7 @@
             <textarea name="Description" id="Description" class="form-control" rows="10" ></textarea>
             <br>
             <button type="submit" class="btn btn-default">Create</button>
+            <button type="submit" class="btn btn-default">Delete</button>
 
 
         </fieldset>
