--- a/Templates/signup.html
+++ b/Templates/signup.html
@@ -42,7 +42,7 @@
             <input type="password" name="inputPassword" id="inputPassword" class="form-control" placeholder="Enter Password" >
             <label for="confirmPassword" >Confirm Password</label>
             <input type="password" name="inputPassword" id="confirmPassword" class="form-control" placeholder="Confirm Password" ><br>
-            <button type="submit" class="btn btn-default">Submit</button>
+            <a href="Profile.html"><button type="submit" class="btn btn-default">Submit</button></a>
         </fieldset>
     </form>
     <footer class="footer">
